Keydown functionality working as intended with the Enter and Tab keys. Some minor CSS changes to make sure the content was justified to the left properly and stretched the containers width as necessary.

--- a/public/index.css
+++ b/public/index.css
@@ -21,15 +21,15 @@ body {
 }
 
 .text-container {
-    height: 50vh;
-    width: 100vw;
-    align-items: center;
-    text-align: center;
     overflow: auto;
 }
 
 .normal {
     position: relative;
+}
+
+.normal-tab {
+    margin-left: 1.5em;
 }
 
 .blinking {
